Teams Membership Updater 1.0.8; Fixed bug is using Done state instead of Ready on the submit button; Set background to white to avoid issues in teams dark mode; Added Logo

--- a/samples/react-teams-membership-updater/src/webparts/teamsMembershipUpdater/components/TeamsMembershipUpdater.module.scss
+++ b/samples/react-teams-membership-updater/src/webparts/teamsMembershipUpdater/components/TeamsMembershipUpdater.module.scss
@@ -6,6 +6,7 @@
     padding: 10px;
     margin: 0px auto;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+    background: #fff;
   }
 
   .row {
